--- a/css/main.css
+++ b/css/main.css
@@ -38,11 +38,11 @@ h1 {
 p {
   display: inline-block;
   color: #333;
-  margin-bottom: 1.5rem
+  margin-bottom: 1.5rem;
 }
 
 .para div {
-  text-align: center
+  text-align: center;
 }
 
 a {
