--- a/css/main.css
+++ b/css/main.css
@@ -1,55 +1,59 @@
 html {
   box-sizing: border-box;
-
   background-color: #eee9de;
+  font-family: Lato, sans-serif;
   line-height: 1.5;
-  font-family: Lato, serif;
 }
 
 *, *::before, ::after {
   box-sizing: inherit;
 }
 
-body {
-  display: block;
-  font-family: Lato;
-  padding: 0;
-  margin: 0;
-}
-
 img {
-  display: inline-block;
-  margin: 0 auto 1.25rem;
-  width: 20em;
-  vertical-align: middle;
+  display: block;
+  width: 100%;
 }
 
-.para {
-  width: 25em;
-  vertical-align: middle;
-}
-
-h1 {
-  display: inline-block;
+h2 {
   color: #333;
   margin-bottom: 1.5rem;
+  margin-top: 0;
 }
 
 p {
-  display: inline-block;
-  color: #333;
+  color: #666;
   margin-bottom: 1.5rem;
+  margin-top: 0;
 }
 
-.para div {
+div {
+  display: inline-block;
+  max-width: 25em;
+  padding: 1em;
+  text-align: left;
+  vertical-align: middle;
+}
+
+section {
+  padding: 2em 0;
   text-align: center;
 }
 
-a {
+.btn {
   display: inline-block;
-  text-align: left;
-  color: #666;
-  border-radius: 4px;
-  border-color: #eee9de;
+  border-color: #333;
   text-decoration: none;
+  border-radius: 4px;
+  padding: .4em .75em .5rem;
+  border-width: 3px;
+  border-style: solid;
+  color: #333;
+}
+
+.btn:hover {
+  color: #666;
+}
+
+body {
+  margin: 0;
 }
